# telecom-monitor

./: .gitignore  README.md  pytest.ini
.github/workflows/: python-ci.yml
ingest-python/: .env.example  pyproject.toml
ingest-python/src/telemon/: models.py
ingest-python/src/telemon.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ingest-python/src/telemon/db/: sqlite.py
ingest-python/src/telemon/ingest/: downdetector.py
ingest-python/tests/: test_dd_parser.py  test_ingest_cli.py  test_sqlite.py
ingest-python/tests/fixtures/: downdetector_sample.html
