[project]
name = "telemon"
version = "0.1.0"
description = "Telecom monitoring – learning project"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Chema"}]
dependencies = [
  "httpx",
  "anyio",
  "selectolax",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 110
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
